--- a/templates/copy-objects.template.yaml
+++ b/templates/copy-objects.template.yaml
@@ -67,35 +67,35 @@ Resources:
             - ''
             - ''
             - 'def copy_objects(source_bucket, dest_bucket, prefix, objects):'
-            - '    s3 = boto3.client(''s3'')'
+            - "    s3 = boto3.client('s3')"
             - '    for o in objects:'
             - '        key = prefix + o'
             - '        copy_source = {'
-            - '            ''Bucket'': source_bucket,'
-            - '            ''Key'': key'
+            - "            'Bucket': source_bucket,"
+            - "            'Key': key"
             - '        }'
             - '        s3.copy_object(CopySource=copy_source, Bucket=dest_bucket, Key=key)'
             - ''
             - ''
             - 'def delete_objects(bucket):'
-            - '    client = boto3.client(''s3'')'
+            - "    client = boto3.client('s3')"
             - '    print("Collecting data from" + bucket)'
-            - '    paginator = client.get_paginator(''list_object_versions'')'
+            - "    paginator = client.get_paginator('list_object_versions')"
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
             - '    for page in result:'
             - '        try:'
-            - '            for k in page[''Versions'']:'
-            - '                objects.append({''Key'':k[''Key''],''VersionId'': k[''VersionId'']})'
+            - "            for k in page['Versions']:"
+            - "                objects.append({'Key':k['Key'],'VersionId': k['VersionId']})"
             - '            try:'
-            - '                for k in page[''DeleteMarkers'']:'
-            - '                    version = k[''VersionId'']'
-            - '                    key = k[''Key'']'
-            - '                    objects.append({''Key'': key,''VersionId'': version})'
+            - "                for k in page['DeleteMarkers']:"
+            - "                    version = k['VersionId']"
+            - "                    key = k['Key']"
+            - "                    objects.append({'Key': key,'VersionId': version})"
             - '            except:'
             - '                pass'
             - '            print("deleting objects")'
-            - '            client.delete_objects(Bucket=bucket,     Delete={''Objects'': objects})'
+            - "            client.delete_objects(Bucket=bucket,     Delete={'Objects': objects})"
             - '           # objects = []'
             - '        except:'
             - '            pass'
@@ -104,7 +104,7 @@ Resources:
             - ''
             - ''
             - 'def timeout(event, context):'
-            - '    logging.error(''Execution is about to time out, sending failure response to CloudFormation'')'
+            - "    logging.error('Execution is about to time out, sending failure response to CloudFormation')"
             - '    cfnresponse.send(event, context, cfnresponse.FAILED, {}, None)'
             - ''
             - ''
@@ -113,19 +113,19 @@ Resources:
             - '    timer = threading.Timer((context.get_remaining_time_in_millis() / 1000.00) - 0.5, timeout, args=[event, context])'
             - '    timer.start()'
             - ''
-            - '    print(''Received event: %s'' % json.dumps(event))'
+            - "    print('Received event: %s' % json.dumps(event))"
             - '    status = cfnresponse.SUCCESS'
             - '    try:'
-            - '        source_bucket = event[''ResourceProperties''][''SourceBucket'']'
-            - '        dest_bucket = event[''ResourceProperties''][''DestBucket'']'
-            - '        prefix = event[''ResourceProperties''][''Prefix'']'
-            - '        objects = event[''ResourceProperties''][''Objects'']'
-            - '        if event[''RequestType''] == ''Delete'':'
+            - "        source_bucket = event['ResourceProperties']['SourceBucket']"
+            - "        dest_bucket = event['ResourceProperties']['DestBucket']"
+            - "        prefix = event['ResourceProperties']['Prefix']"
+            - "        objects = event['ResourceProperties']['Objects']"
+            - "        if event['RequestType'] == 'Delete':"
             - '            delete_objects(dest_bucket)'
             - '        else:'
             - '            copy_objects(source_bucket, dest_bucket, prefix, objects)'
             - '    except Exception as e:'
-            - '        logging.error(''Exception: %s'' % e, exc_info=True)'
+            - "        logging.error('Exception: %s' % e, exc_info=True)"
             - '        status = cfnresponse.FAILED'
             - '    finally:'
             - '        timer.cancel()'
@@ -204,15 +204,15 @@ Resources:
             - ''
             - 'def delete_NonVersionedobjects(bucket):'
             - '    print("Collecting data from" + bucket)'
-            - '    paginator =     client.get_paginator(''list_objects_v2'')'
+            - "    paginator =     client.get_paginator('list_objects_v2')"
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
             - '    for page in result:'
             - '        try:'
-            - '            for k in page[''Contents'']:'
-            - '                objects.append({''Key'': k[''Key'']})'
+            - "            for k in page['Contents']:"
+            - "                objects.append({'Key': k['Key']})"
             - '                print("deleting objects")'
-            - '                client.delete_objects(Bucket=bucket, Delete={''Objects'': objects})'
+            - "                client.delete_objects(Bucket=bucket, Delete={'Objects': objects})"
             - '                objects = []'
             - '        except:'
             - '            pass'
@@ -220,22 +220,22 @@ Resources:
             - ''
             - 'def delete_versionedobjects(bucket):'
             - '    print("Collecting data from" + bucket)'
-            - '    paginator = client.get_paginator(''list_object_versions'')'
+            - "    paginator = client.get_paginator('list_object_versions')"
             - '    result = paginator.paginate(Bucket=bucket)'
             - '    objects = []'
             - '    for page in result:'
             - '        try:'
-            - '            for k in page[''Versions'']:'
-            - '                objects.append({''Key'':k[''Key''],''VersionId'': k[''VersionId'']})'
+            - "            for k in page['Versions']:"
+            - "                objects.append({'Key':k['Key'],'VersionId': k['VersionId']})"
             - '            try:'
-            - '                for k in page[''DeleteMarkers'']:'
-            - '                    version = k[''VersionId'']'
-            - '                    key = k[''Key'']'
-            - '                    objects.append({''Key'': key,''VersionId'': version})'
+            - "                for k in page['DeleteMarkers']:"
+            - "                    version = k['VersionId']"
+            - "                    key = k['Key']"
+            - "                    objects.append({'Key': key,'VersionId': version})"
             - '            except:'
             - '                pass'
             - '            print("deleting objects")'
-            - '            client.delete_objects(Bucket=bucket, Delete={''Objects'': objects})'
+            - "            client.delete_objects(Bucket=bucket, Delete={'Objects': objects})"
             - '           # objects = []'
             - '        except:'
             - '            pass'
@@ -244,7 +244,7 @@ Resources:
             - ''
             - ''
             - 'def timeout(event, context):'
-            - '    logging.error(''Execution is about to time out, sending failure response to CloudFormation'')'
+            - "    logging.error('Execution is about to time out, sending failure response to CloudFormation')"
             - '    cfnresponse.send(event, context, cfnresponse.FAILED, {}, None)'
             - ''
             - ''
@@ -253,15 +253,15 @@ Resources:
             - '    timer = threading.Timer((context.get_remaining_time_in_millis() / 1000.00) - 0.5, timeout, args=[event, context])'
             - '    timer.start()'
             - ''
-            - '    print(''Received event: %s'' % json.dumps(event))'
+            - "    print('Received event: %s' % json.dumps(event))"
             - '    status = cfnresponse.SUCCESS'
             - '    try:'
-            - '        dest_bucket = event[''ResourceProperties''][''DestBucket'']'
-            - '        if event[''RequestType''] == ''Delete'':'
+            - "        dest_bucket = event['ResourceProperties']['DestBucket']"
+            - "        if event['RequestType'] == 'Delete':"
             - '            CheckifVersioned = client.get_bucket_versioning(Bucket=dest_bucket)'
             - '            print CheckifVersioned'
-            - '            if ''Status'' in CheckifVersioned:'
-            - '                print CheckifVersioned[''Status'']'
+            - "            if 'Status' in CheckifVersioned:"
+            - "                print CheckifVersioned['Status']"
             - '                print ("This is a versioned Bucket")'
             - '                delete_versionedobjects(dest_bucket)'
             - '            else:'
@@ -270,7 +270,7 @@ Resources:
             - '        else:'
             - '            print("Nothing to do")'
             - '    except Exception as e:'
-            - '        logging.error(''Exception: %s'' % e, exc_info=True)'
+            - "        logging.error('Exception: %s' % e, exc_info=True)"
             - '        status = cfnresponse.FAILED'
             - '    finally:'
             - '        timer.cancel()'
@@ -313,7 +313,6 @@ Resources:
                   - !GetAtt
                     - DestinationBucket
                     - Arn
-                  - !Sub 'arn:aws:s3:::*'
             Version: 2012-10-17
           PolicyName: Empty-bucket
     Type: 'AWS::IAM::Role'
