Add metadata for doc

--- a/templates/autoscale-existing-vpc.template.yaml
+++ b/templates/autoscale-existing-vpc.template.yaml
@@ -586,6 +586,8 @@ Resources:
             - s3
       TimeoutInMinutes: 30
 Metadata:
+  QuickStartDocumentation:
+    EntrypointName: "Parameter to launch in an existing VPC"
   'AWS::CloudFormation::Interface':
     ParameterGroups:
       - Label:
